@@ -89,16 +89,16 @@ mjb.extensions=AVI DIVX MKV WMV M2TS TS RM QT ISO VOB MPG MOV MP4 M1V M2V M4V M2
 mjb.skin.dir=./skins/default
 
 # Genres file used for consolidating/renaming genres
-mjb.xmlGenreFile=genres.xml
+mjb.xmlGenreFile=genres-default.xml
 
 # Categories file used for enabling/renaming catgories
-mjb.xmlCategoryFile=categories.xml
+mjb.xmlCategoryFile=categories-default.xml
 
 # Number of Days a file is considered for the NEW category
-# And number of movies to include
-# A 0 for newdays disables the new category
-# A 0 for count will be treated as unlimited
-# example: mjb.newdays=30  mjb.newcount=25 (the 25 most recent movies within the last 30 days)
+# And number of videos to include
+# A 0 (Zero) for newdays disables the new category
+# A 0 (Zero) for count will be treated as unlimited
+# example: mjb.newdays=30  mjb.newcount=25 (the 25 most recent videos within the last 30 days)
 mjb.newdays=7
 mjb.newcount=0
 
