@@ -42,12 +42,12 @@ import javax.xml.stream.events.XMLEvent;
 import com.moviejukebox.MovieJukebox;
 import com.moviejukebox.model.ExtraFile;
 import com.moviejukebox.model.Identifiable;
+import com.moviejukebox.model.Index;
 import com.moviejukebox.model.Jukebox;
 import com.moviejukebox.model.Library;
 import com.moviejukebox.model.Library.IndexInfo;
 import com.moviejukebox.model.Movie;
 import com.moviejukebox.model.MovieFile;
-import com.moviejukebox.model.Index;
 import com.moviejukebox.plugin.ImdbPlugin;
 import com.moviejukebox.tools.FileTools;
 import com.moviejukebox.tools.HTMLTools;
