@@ -5,7 +5,8 @@
 MovieJukebox 2.3 BETA
 ---------------------
  - Enhancement    #997 Ability to turn off 'EXTRAS' processing
- - Enhancement   #1687 Only load the required poster scanner plugins 
+ - Enhancement   #1671 Add New:TV and New:Movies categories
+ - Enhancement   #1687 Only load the required poster scanner plugins
 
 MovieJukebox 2.2
 ----------------
